# dep-fc

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup_fc.sh
.github/workflows/: build-test-docker.yml
src/: config.py  create_annual_summary.py  grid.py  list.py  process_fc_scene.py  process_recent_landsat_scenes.py  process_scenes_for_year.py  processors.py  run.py  util.py
workflow/: fc-quarterly-0-0-1.yaml  fc.yaml  fc_summary_annual.yaml
