[project]
name = "dep-fc"
version = "0.0.1"
description = "Digital Earth Pacific Fractional Cover Unmixing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloud-logger",
    "datacube",
    "dep-tools",
    "gdal == 3.8.4",
    "odc-algo",
    "odc-stats",
    "scikit-build",
    "typer",
]

[tool.uv.sources]
dep-tools = { git = "https://github.com/digitalearthpacific/dep-tools.git", tag="0e53b22"}
cloud-logger = { git = "https://github.com/jessjaco/cloud-logger.git", tag="3a02726" }
