[project]
name = "dep-fc"
version = "0.1.0"
description = "Digital Earth Pacific Fractional Cover Unmixing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloud-logger",
    "datacube",
    "dep-tools",
    "gdal == 3.8.4",
    "odc-algo>=1.0.1",
    "odc-stats>=1.9.0",
    "odc-geo>=0.5.0rc1",
    "scikit-build",
    "typer",
    "fractional-cover",
]

[tool.uv.sources]
dep-tools = { git = "https://github.com/digitalearthpacific/dep-tools.git", tag="b412d80"}
cloud-logger = { git = "https://github.com/jessjaco/cloud-logger.git", tag="3a02726" }
fractional-cover = { git = "https://github.com/jessjaco/fc.git", tag="6f92d36"}


[dependency-groups]
dev = [
    "black>=25.1.0",
]
